name:                google-url
version:             0.1
synopsis:            A wrapper for google-url.
description:         A wrapper for google-url.
license:             BSD3
license-file:        LICENSE
author:              Steve Severance <sseverance@alphaheavy.com>
maintainer:          Steve Severance <sseverance@alphaheavy.com>
homepage:            https://github.com/alphaHeavy/google-url
bug-reports:         https://github.com/alphaHeavy/google-url/issues
category:            Data, Url

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  CC-Options: -x cpp
  hs-source-dirs:
    src
  c-sources:
    cbits/wrapper.c
  Include-Dirs:      
    cbits
    cbits/google-url/
    cbits/google-url/base
    cbits/google-url/src
  exposed-modules:
    Data.Url
  other-modules:
    Bindings.Url
  build-depends:
    base              >= 3      && < 5,
    bindings-DSL >= 1.0.12,
    bytestring,
    ghc-prim
  ghc-options:
    -Wall -Werror

test-suite google-url-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 3      && < 5,
    ghc-prim,
    test-framework             >= 0.4,
    test-framework-hunit       >= 0.2.6,
    test-framework-quickcheck2 >= 0.2.10,
    HUnit                      >= 1.2.2.3,
    QuickCheck                 >= 2.4.0.1

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/google-url.git
