name:                google-url
version:             0.1
synopsis:            A wrapper for google-url.
description:         A wrapper for google-url.
license:             BSD3
license-file:        LICENSE
author:              Steve Severance <sseverance@alphaheavy.com>
maintainer:          Steve Severance <sseverance@alphaheavy.com>
homepage:            https://github.com/alphaHeavy/google-url
bug-reports:         https://github.com/alphaHeavy/google-url/issues
category:            Data, Url

build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  tests/Main.hs

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  c-sources:
    cbits/wrapper.cpp
    cbits/googleurl/base/logging.cc
    cbits/googleurl/base/string16.cc
    cbits/googleurl/src/gurl.cc
    cbits/googleurl/src/url_canon_etc.cc
    cbits/googleurl/src/url_canon_filesystemurl.cc
    cbits/googleurl/src/url_canon_fileurl.cc
    cbits/googleurl/src/url_canon_host.cc
    cbits/googleurl/src/url_canon_icu.cc
    cbits/googleurl/src/url_canon_internal.cc
    cbits/googleurl/src/url_canon_ip.cc
    cbits/googleurl/src/url_canon_mailtourl.cc
    cbits/googleurl/src/url_canon_path.cc
    cbits/googleurl/src/url_canon_pathurl.cc
    cbits/googleurl/src/url_canon_query.cc
    cbits/googleurl/src/url_canon_relative.cc
    cbits/googleurl/src/url_canon_stdurl.cc
    cbits/googleurl/src/url_parse.cc
    cbits/googleurl/src/url_parse_file.cc
    cbits/googleurl/src/url_util.cc
  Include-Dirs:      
    cbits
    cbits/googleurl/
    cbits/googleurl/base
    cbits/googleurl/src
    /usr/include
  extra-libraries:
    stdc++
    icuuc
  exposed-modules:
    Data.Url
    Data.Url.Internal
    Data.Url.Types
  other-modules:
    Bindings.Url
  build-depends:
    base              >= 3      && < 5,
    bindings-DSL >= 1.0.12,
    bytestring,
    deepseq,
    ghc-prim,
    mtl,
    text
  ghc-options:
    -Wall

test-suite google-url-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 3      && < 5,
    ghc-prim,
    test-framework             >= 0.4,
    test-framework-hunit       >= 0.2.6,
    test-framework-quickcheck2 >= 0.2.10,
    HUnit                      >= 1.2.2.3,
    QuickCheck                 >= 2.4.0.1

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/google-url.git
